syntax = "proto3";

package user;

option go_package = "proto/user";

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
    int32 code = 1;
    string message = 2;
    UserInfo data = 3;
}

message UserInfo {
  int32 id = 1;
  string name = 2;
  string email = 3;
}